gcc/testsuite/c-c++-common/cilk-plus/CK/pr79428-4.c
/* PR c/79428 */
/* { dg-options "-fcilkplus" } */
#pragma cilk grainsize /* { dg-error "must be inside a function" } */
